--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -49,6 +49,7 @@
 }
 
 .header .functions view{
+  position: relative;
   width: 44rpx;
   height: 44rpx;
   margin-right: 64rpx;
@@ -56,6 +57,20 @@
 
 .header .functions view:last-of-type{
   margin-right: 0;
+}
+
+.header .functions view .num{
+  position: absolute;
+  top: -20%;
+  right: -20%;
+  width: 32rpx;
+  height: 32rpx;
+  font-size: 24rpx;
+  line-height: 32rpx;
+  color: #fff;
+  background-color: #F97572;
+  border-radius: 50%;
+  text-align: center;
 }
 
 .banner{
@@ -248,6 +263,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
+  padding-bottom: 40rpx;
 }
 
 .hot_recommend .tabs_content>view .main>view{
@@ -357,7 +373,7 @@
   font-size: 28rpx;
   line-height: 40rpx;
   color: #3C3C3C;
-  padding: 56rpx 0 40rpx;
+  padding: 16rpx 0 40rpx;
   text-align: center;
 }
 
@@ -388,6 +404,7 @@
   width: 684rpx;
   height: 238rpx;
   margin: 0 auto 25rpx;
+  padding-bottom: 40rpx;
 }
 
 .coupon .main_row .main:last-of-type{
@@ -440,6 +457,13 @@
 .coupon .main .content .top .worth .discount .num{
   font-size: 62rpx;
   line-height: 59rpx;
+  font-weight: normal;
+  margin-right: 10rpx;
+}
+
+.coupon .main .content .top .worth .discount .num .currency{
+  font-size: 24rpx;
+  line-height: 33rpx;
 }
 
 .coupon .main .content .top .worth .discount .fracture{
