--- a/pages/shoppingCart/shoppingCart.wxss
+++ b/pages/shoppingCart/shoppingCart.wxss
@@ -116,7 +116,7 @@
 
 .like .recommend .list .title_warp {
   width: 100%;
-  height: 84rpx;
+  /* height: 84rpx; */
   font-size: 32rpx;
   line-height: 42rpx;
   color: #3c3c3c;
